--- a/home.html
+++ b/home.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -14,12 +18,46 @@
   </head>
   <body>
 
-          <div class="container"><!--Begining Container-->
+          <div class="container-fluid"><!--Begining Container-->
 
             <!-- Begin Row 1 -->
             <div class="row">
-              <div class="col-sm-12">
-                <!-- First Row -->
+              <div class="col-sm-2">
+              </div>
+              <div class="col-sm-10">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                  <!-- Indicators -->
+                  <!-- <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                  </ol> -->
+
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <p class="img-center"><img src="https://www.learnacademy.org/assets/logo-049ba78247c7e6c80afab51071714891c5969ff9d5a4e4b71197bc58f7d07404.png"></p>
+                    </div>
+                    <!-- <div class="item">
+                      <p class="img-center"><img src="https://www.learnacademy.org/assets/illustration-c6e69d1f7fc95bfa3ec8f9ba38b688209443fac1da42c683cc798c77164b4acf.jpg"></p>
+                    </div> -->
+                    <div class="item">
+                      <p class="img-center"><img src="https://www.learnacademy.org/assets/logo-049ba78247c7e6c80afab51071714891c5969ff9d5a4e4b71197bc58f7d07404.png"></p>
+                      <div class="carousel-caption">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
               </div>
             </div><!-- End Row 1 -->
 
@@ -27,93 +65,129 @@
             <div class="row">
               <div class="col-sm-2 language left_column">
                 <h1>Top 10</h1>
-                <p id="underhead">Languages</p>
-                <a href="#" class="btn btn-danger">Ruby</a>
-                <a href="#" class="btn btn-danger">Javascript</a>
-                <a href="#" class="btn btn-danger">Python</a>
+                <div class="btn-group">
+                  <button class="btn dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-chevron-down
+"></span> Languages
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="#ruby" target="_blank" class="ruby">Ruby</a></li>
+                    <li><a href="#java" class="js">JavaScript</a></li>
+                    <li><a href="#html" class="html">HTML</a></li>
+                    <li><a href="#cplus" class="c_">C#</a></li>
+                    <li><a href="#c" class="cplus">C++</a></li>
+                    <li><a href="#perl" class="perl">Perl</a></li>
+                    <li><a href="#scala" class="scala">Scala</a></li>
+                    <li><a href="#python" class="python">Python</a></li>
+                    <li><a href="#go" class="go">GO</a></li>
+                    <li><a href="#php" class="php">PHP</a></li>
+                  </ul>
+                </div>
               </div>
               <div class="col-sm-3 language">
-                <h2>Ruby</h2>
+                <h2 id="ruby">Ruby</h2>
                 <p class="img-center"><img src="http://orig06.deviantart.net/9941/f/2013/261/a/f/ruby_minimal_logo_by_oscarito201094-d6mvh10.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>puts 'Hello World!</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-4 language">
-                <h2>JavaScript</h2>
+                <h2 id="java">JavaScript</h2>
                 <p class="img-center"><img src="https://www.codementor.io/assets/page_img/learn-javascript.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>console.log("Hello World!")</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-3 language">
-                <h2>Python</h2>
-                <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 id="html">HTML</h2>
+                <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/600px-HTML5_Badge.svg.png"></p>
+
+                <p class="code"><code>&lt;p&gt;Hello World!&lt;/p&gt;</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div> <!-- End Row 2 -->
 
             <!-- Begin Row 3 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
-                <div class="btn-group-vertical">
-                  <a href="#" class="btn btn-danger">IDL</a>
-                  <a href="#" class="btn btn-danger">C#</a>
-                </div>
               </div>
               <div class="col-sm-6 language">
-                <h2>IDL</h2>
-                <p class="img-center"><img src="https://qph.ec.quoracdn.net/main-thumb-t-332664-200-5vxD9JHtzossETE8XRYD6kw70Bpf0F7C.jpeg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></p>
+                <h2 id="c">C++</h2>
+                <p class="img-center"><img src="https://ignite.apache.org/images/cpp.png"></p>
+                <p class="code"><code>#include &lt;iostream&gt;<br>
+                  int main() {<br>
+                  &nbsp;&nbsp;std::cout &lt;&lt; "Hello World!";<br>
+                }</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-4 language">
-                <h2>C#</h2>
+                <h2 id="cplus">C#</h2>
                 <p class="img-center"><img src="http://uxdream.com/images/svg/logo-csharp.svg"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>public class Hello1<br>
+                {<br>
+                &nbsp;&nbsp;public static void Main()<br>
+                &nbsp;&nbsp;{<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;System.Console.WriteLine("Hello World!");<br>
+            &nbsp;&nbsp;}<br>}</code></p>
+            <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div> <!-- End Row 3 -->
 
             <!-- Begin Row 4 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
-                <div class="btn-group-vertical">
-                  <a href="#" class="btn btn-danger">C++</a>
-                  <a href="#" class="btn btn-danger">Scala</a>
-                  <a href="#" class="btn btn-danger">HTML</a>
-                </div>
               </div>
               <div class="col-sm-3 language">
-                <h2>C++</h2>
-                <p class="img-center"><img src="https://ignite.apache.org/images/cpp.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 id="perl">Perl</h2>
+                <p class="img-center"><img src="http://bioinfotraining.bio.cam.ac.uk/images/perl.jpg">
+                <p class="code"><code>print "Hello World\n";</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-4 language">
-                <h2>Scala</h2>
+                <h2 id="scala">Scala</h2>
                 <p class="img-center"><img src="https://raw.githubusercontent.com/monifu/scala-best-practices/master/assets/scala-logo-256.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>object HelloWorld {<br>
+                  &nbsp;&nbsp;def main(args: Array[String]): Unit = {<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;println("Hello, world!")<br>
+                  &nbsp;&nbsp;}<br>
+                }
+              </code></p>
+              <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-3 language">
-                <h2>HTML</h2>
-                <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/600px-HTML5_Badge.svg.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2 id="python">Python</h2>
+                <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png"></p>
+
+                <p class="code"><code>print "Hello World"</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div> <!-- End Row 4 -->
 
             <!-- Begin Row 5 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
-                <div class="btn-group-vertical">
-                  <a href="#" class="btn btn-danger">GO</a>
-                  <a href="#" class="btn btn-danger">PHP</a>
-                </div>
               </div>
               <div class="col-sm-4 language">
-                <h2>Go</h2>
+                <h2 id="go">Go</h2>
                 <p class="img-center"><img src="http://www.unixstickers.com/image/cache/data/stickers/golang/golang.sh-600x600.png"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>import "fmt"<br><br>
+                func main() {<br>
+                &nbsp;&nbsp;fmt.Println("Hello World!")<br>
+                }</code></p>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
               <div class="col-sm-6 language">
-                <h2>PHP</h2>
+                <h2 id="php">PHP</h2>
                 <p class="img-center"><img src="https://qph.ec.quoracdn.net/main-qimg-9c7723e302afb4d0063023eba3055e9e?convert_to_webp=true"></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="code"><code>&lt;?php<br>Print "Hello, World!";<br>?&gt;</code></p>
+                  <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div> <!-- End Row 5 -->
+
+            <!-- Begin Footer -->
+            <div class="row">
+              <div class="col-sm-12" id="copyright">
+                <span class="glyphicon glyphicon-copyright-mark"></span><span class="brand">Steph &amp; Steph</span>
+              </div>
+            </div> <!-- End Footer -->
+
 
           </div> <!-- End container -->
   </body>
