--- a/home.html
+++ b/home.html
@@ -83,31 +83,38 @@
                   </ul>
                 </div>
               </div>
+
+              <!-- Ruby -->
               <div class="col-sm-3 language">
                 <h2 id="ruby">Ruby</h2>
                 <p class="img-center"><img src="http://orig06.deviantart.net/9941/f/2013/261/a/f/ruby_minimal_logo_by_oscarito201094-d6mvh10.png"></p>
                 <p class="code"><code>puts 'Hello World!</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End Ruby -->
+
+              <!-- JavaScript -->
               <div class="col-sm-4 language">
                 <h2 id="java">JavaScript</h2>
                 <p class="img-center"><img src="https://www.codementor.io/assets/page_img/learn-javascript.png"></p>
                 <p class="code"><code>console.log("Hello World!")</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div> <!-- End JavaScript -->
+
+              <!-- HTML -->
               <div class="col-sm-3 language">
                 <h2 id="html">HTML</h2>
                 <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/600px-HTML5_Badge.svg.png"></p>
-
                 <p class="code"><code>&lt;p&gt;Hello World!&lt;/p&gt;</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- HTML -->
             </div> <!-- End Row 2 -->
 
             <!-- Begin Row 3 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
               </div>
+
+              <!-- C++ -->
               <div class="col-sm-6 language">
                 <h2 id="c">C++</h2>
                 <p class="img-center"><img src="https://ignite.apache.org/images/cpp.png"></p>
@@ -116,7 +123,9 @@
                   &nbsp;&nbsp;std::cout &lt;&lt; "Hello World!";<br>
                 }</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End C++ -->
+
+              <!-- C# -->
               <div class="col-sm-4 language">
                 <h2 id="cplus">C#</h2>
                 <p class="img-center"><img src="http://uxdream.com/images/svg/logo-csharp.svg"></p>
@@ -127,19 +136,23 @@
               &nbsp;&nbsp;&nbsp;&nbsp;System.Console.WriteLine("Hello World!");<br>
             &nbsp;&nbsp;}<br>}</code></p>
             <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+          </div><!-- End C# -->
             </div> <!-- End Row 3 -->
 
             <!-- Begin Row 4 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
               </div>
+
+              <!-- Perl -->
               <div class="col-sm-3 language">
                 <h2 id="perl">Perl</h2>
                 <p class="img-center"><img src="http://bioinfotraining.bio.cam.ac.uk/images/perl.jpg">
                 <p class="code"><code>print "Hello World\n";</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End Perl -->
+
+              <!-- Scala -->
               <div class="col-sm-4 language">
                 <h2 id="scala">Scala</h2>
                 <p class="img-center"><img src="https://raw.githubusercontent.com/monifu/scala-best-practices/master/assets/scala-logo-256.png"></p>
@@ -150,20 +163,23 @@
                 }
               </code></p>
               <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+            </div><!-- Scala -->
+
+              <!-- Python -->
               <div class="col-sm-3 language">
                 <h2 id="python">Python</h2>
                 <p class="img-center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png"></p>
-
                 <p class="code"><code>print "Hello World"</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End Python -->
             </div> <!-- End Row 4 -->
 
             <!-- Begin Row 5 -->
             <div class="row">
               <div class="col-sm-2 language left_column">
               </div>
+
+              <!-- Go -->
               <div class="col-sm-4 language">
                 <h2 id="go">Go</h2>
                 <p class="img-center"><img src="http://www.unixstickers.com/image/cache/data/stickers/golang/golang.sh-600x600.png"></p>
@@ -172,13 +188,15 @@
                 &nbsp;&nbsp;fmt.Println("Hello World!")<br>
                 }</code></p>
                 <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End Go -->
+
+              <!-- PHP -->
               <div class="col-sm-6 language">
                 <h2 id="php">PHP</h2>
                 <p class="img-center"><img src="https://qph.ec.quoracdn.net/main-qimg-9c7723e302afb4d0063023eba3055e9e?convert_to_webp=true"></p>
                 <p class="code"><code>&lt;?php<br>Print "Hello, World!";<br>?&gt;</code></p>
                   <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
+              </div><!-- End PHP -->
             </div> <!-- End Row 5 -->
 
             <!-- Begin Footer -->
