Cleaned up bad comments

--- a/home.html
+++ b/home.html
@@ -26,21 +26,12 @@
               </div>
               <div class="col-sm-10">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                  <!-- Indicators -->
-                  <!-- <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                  </ol> -->
 
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
                     <div class="item active">
                       <p class="img-center"><img src="https://www.learnacademy.org/assets/logo-049ba78247c7e6c80afab51071714891c5969ff9d5a4e4b71197bc58f7d07404.png"></p>
                     </div>
-                    <!-- <div class="item">
-                      <p class="img-center"><img src="https://www.learnacademy.org/assets/illustration-c6e69d1f7fc95bfa3ec8f9ba38b688209443fac1da42c683cc798c77164b4acf.jpg"></p>
-                    </div> -->
                     <div class="item">
                       <p class="img-center"><img src="https://www.learnacademy.org/assets/logo-049ba78247c7e6c80afab51071714891c5969ff9d5a4e4b71197bc58f7d07404.png"></p>
                       <div class="carousel-caption">
@@ -163,7 +154,7 @@
                 }
               </code></p>
               <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div><!-- Scala -->
+            </div><!-- End Scala -->
 
               <!-- Python -->
               <div class="col-sm-3 language">
